# DreamGE

./: .gitignore  .gitmodules  CMakeLists.txt  CMakelists.txt  README.md  main.cpp  needdo.md  rxlearn  test.cpp  test.hpp
System/: mem.h  obj.h  pttrn.h  strm.h  ticmn.h  tidyn.h  tisvr.h  tisys.h  tisysbak.h
